fixinf visible scrollbar

--- a/ui/rssm.css
+++ b/ui/rssm.css
@@ -2,7 +2,7 @@
 
 /* make sure we use all vertical space and use proper font */
 html, body  {
-    height: 100%;
+    height: 99%;
     font-family: Helvetica;
 }
 
